<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".Fragments.Login"
    android:paddingTop="10dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#00E9F2E0"
        app:cardElevation="0dp"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/loginHighlightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:text="Đăng nhập"
            android:textAlignment="center"
            android:textColor="#F5F5F5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:shadowColor="#888888"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:cursorErrorColor="@color/black"
            app:hintTextColor="#1EA69A"
            android:textColorHint="@color/hintColor"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:autofillHints="emailAddress"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserratregular"
                android:background="@drawable/edit_text_shape"
                android:textColorHighlight="#A7E957" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/black"
            app:cursorColor="@color/black"
            app:cursorErrorColor="@color/black"
            app:hintTextColor="#1EA69A"
            android:textColorHint="@color/hintColor"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:padding="8dp"
                android:background="@drawable/edit_text_shape"
                android:textColor="@color/black"
                android:fontFamily="@font/montserratregular"
                android:textColorHighlight="#A7E957"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ghi nhớ đăng nhập"
            android:textColor="@color/white"
            android:fontFamily="@font/montserratregular"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/login_btn_label"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/login_buttons_design"
            app:backgroundTint="@null"
            android:shadowColor="#FFFFFF"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="20"
            android:layout_gravity="center"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/signup_button_design"
            app:backgroundTint="@null"
            android:shadowColor="#FFFFFF"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="25"/>

    </LinearLayout></com.google.android.material.card.MaterialCardView>

</LinearLayout>